[build_sphinx]
no-doctest = 1

[egg_info]
;tag_build = .dev1

[tool:pytest]
norecursedirs = .svn *.egg

[upload_docs]
upload_dir = docs/build/html
show_response = 1

[metadata]
name = orderedstructs
author = Paul Ross
author_email = apaulross@gmail.com
setup_requires = 

install_requires = 

version = 0.3.5
console_scripts = 
keywords = 
classifiers = 
	# Uncomment this if your project is this a library package
	Topic :: Software Development :: Libraries
tests_require = 
	# Testing dependencies
	pytest
	pytest-cov
    hypothesis
description = Ordered data structures
