[build_sphinx]
no-doctest = 1

[egg_info]
tag_build = .dev1

[pytest]
norecursedirs = .svn *.egg

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[metadata]
name = cSkiplist
author = Paul Ross
author_email = paul.ross@ahl.com
setup_requires = 

install_requires = 

version = 0.1.0
console_scripts = 
keywords = 
classifiers = 
	# Uncomment this if your project is this a library package
	Topic :: Software Development :: Libraries
tests_require = 
	# Testing dependencies
	mock
	pytest-cov
    hypothesis
description = AHL Skip List
